--- a/Html/9.Id-Classes/index.html
+++ b/Html/9.Id-Classes/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>IDs and Classes</title>
-  </head>
-  <body>
-    <!-- class can be repeated -->
-    <p class="paragraph1">This element has a the class of "paragraph1"</p>
-    <!-- id should be unique -->
-    <p id="fancy">This element has a the ID of "fancy"</p>
-    <p id="fancy2">This element has a the ID of "fancy"</p>
-  </body>
+    <head>
+        <title>IDs and Classes</title>
+    </head>
+    <body>
+        <!-- class can be repeated -->
+        <p class="paragraph1">This element has a the class of "paragraph1"</p>
+        <p class="paragraph1 para2">
+            Element can have multiple classes: here named "paragraph2" "para2"
+        </p>
+        <!-- id should be unique -->
+        <p id="fancy">This element has a the ID of "fancy"</p>
+        <p id="fancy2">This element has a the ID of "fancy"</p>
+        <p id="special" class="val1 val2">
+            we can id and class together, unique id and can have mutiple-classes
+        </p>
+    </body>
 </html>
