"link-styles added"

--- a/Css/Links-box-positioning/links-style.html
+++ b/Css/Links-box-positioning/links-style.html
@@ -2,28 +2,29 @@
 <html lang="en">
     <head>
         <title>Styling Links</title>
+        <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
         <div id="container">
             <h1>Styling Links!</h1>
             <p>
                 <a href="https://github.com/princebansal7" id="link-1"
-                    >My GitHub Link</a
+                    >Link-1</a
                 >
             </p>
             <p>
                 <a href="https://github.com/princebansal7" id="link-2"
-                    >My GitHub Link</a
+                    >Link-2</a
                 >
             </p>
             <p>
                 <a href="https://github.com/princebansal7" id="link-3"
-                    >My GitHub Link</a
+                    >Link-3</a
                 >
             </p>
             <p>
                 <a href="https://github.com/princebansal7" id="link-4"
-                    >My GitHub Link</a
+                    >Link-4</a
                 >
             </p>
         </div>
