fetch - comment updated

--- a/authentication-concepts/1.fetchApi.html
+++ b/authentication-concepts/1.fetchApi.html
@@ -19,7 +19,7 @@
                 );
             }
 
-            // clearner way using async await
+            // cleaner way using async await
             async function getUserData2() {
                 const result = await fetch(
                     "https://jsonplaceholder.typicode.com/users"
