--- a/frontend-backend/example-1/frontend.html
+++ b/frontend-backend/example-1/frontend.html
@@ -31,8 +31,8 @@ Note:
       done the sum logic here on frontend itself
 
     - But this is essentially what happens in real world,
-      frontend send bunch of request to backend server and backend returns some 
-      response, using that frontend folks do some DOM manipulation and hence the 
-      whole full stack flow (this is just high level understanding with basic example) 
+      frontend sends bunch of requests to backend server and backend returns some 
+      response, using that response frontend folks do some DOM manipulation and hence the 
+      whole fullstack flow (this is just high level understanding with basic example) 
 
 -->
