removed id from body

--- a/frontend-backend/example-1/frontend.html
+++ b/frontend-backend/example-1/frontend.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <body id="bod">
+    <body>
         <input id="a" type="text" placeholder="69" /></input>
         <br>
         <input id="b" type="text" placeholder="7" /></input>
