--- a/frontend-backend/throttling-debouncing/frontend.html
+++ b/frontend-backend/throttling-debouncing/frontend.html
@@ -3,7 +3,7 @@
     <body>
         <!--         
         - I have added oninput => as soon as we type at each keystroke, 
-          populateDiv() was called and request goes to backend. 
+          populateDiv() was getting called and request goes to backend. 
           (now instead of populateDiv() we are calling deboucePopulateDiv(), you'll see why)
           
          Debouncing Concept:
