todo added with react like implementation - comment fixed

--- a/dom-manipulation/todo-with-react-underhood/todoReactUnderhood.html
+++ b/dom-manipulation/todo-with-react-underhood/todoReactUnderhood.html
@@ -102,9 +102,9 @@
 <!--
 
  This way, the whole web page doesn't gets cleared upfront before updating or removing
- elements, and just updates the state after calculating the diffences
- - But this is way too hard to write and more complex applications, that's 
-   where React, ReactDOM comes into picture, they handles all this complex tasks
+ elements, and just updates the state after calculating the differences
+ - But this way is too hard to write the code for more complex applications, that's 
+   where React JS comes into picture, it handles all this complex tasks
  - We'll build ToDo using react and see the difference ! 
 
 -->
